# TAMI4-POC-New

./: agent.py  main.py  prompts.py  pyproject.toml
sub_agents/creative/: agent.py  prompts.py
sub_agents/data/: agent.py  prompts.py  tools.py
sub_agents/performance/: agent.py  prompts.py
sub_agents/research/: agent.py  prompts.py
tools/: visualization.py
