[project]
name = "tami4-poc-v3"
version = "0.1.0"
description = "Tami4 Marketing Multi-Agent System"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=0.1.0",
    "google-cloud-aiplatform[adk,agent-engines]>=1.70.0",
    "google-cloud-bigquery>=3.25.0",
    "google-genai>=0.3.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "seaborn>=0.12.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.30.0",
    "fastapi>=0.111.0"
]
